[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "nonebot_plugin_jm_baize"
version = "1.0.0"
description = "NoneBot2 JM 漫画插件，支持搜索、详情查看与 PDF/ZIP 下载"
license = { text = "MIT" }
authors = [{ name = "sangonomiya249", email = "sangonomiya249@gmail.com" }]
readme = "README.md"
keywords = ["nonebot", "nonebot2", "jm", "comic", "manga"]
requires-python = ">=3.9"
dependencies = [
    "nonebot2>=2.2.0",
    "nonebot-adapter-onebot>=11.0",
    "Pillow>=9.0",
    "jmcomic>=2.0",
    "img2pdf>=0.4",
    "pypdf>=3.0",
    "httpx>=0.24",
]

[project.urls]
Homepage = "https://github.com/sangonomiya249/nonebot_plugin_jm_baize"
Repository = "https://github.com/sangonomiya249/nonebot_plugin_jm_baize"

[project.entry-points."nonebot2.plugin"]
nonebot_plugin_jm_baize = "nonebot_plugin_jm_baize"

[tool.setuptools.packages.find]
where = ["."]
include = ["nonebot_plugin_jm_baize"]
exclude = ["screenshots", "screenshots/*"]
